Fix header, list, paragraph font sizes and margins; image wrap for WYSIWYG editor

--- a/css/style-base.css
+++ b/css/style-base.css
@@ -3,15 +3,15 @@
   Child theme of HTML5Blank
 
   Parent Theme Name: HTML5Blank
-	Theme URI: http://html5blank.com
-	Description: HTML5 Blank WordPress Theme
-	Version: 1.4.3
-	Author: Todd Motto (@toddmotto)
-	Author URI: http://toddmotto.com
-	Tags: Blank, HTML5, CSS3
+  Theme URI: http://html5blank.com
+  Description: HTML5 Blank WordPress Theme
+  Version: 1.4.3
+  Author: Todd Motto (@toddmotto)
+  Author URI: http://toddmotto.com
+  Tags: Blank, HTML5, CSS3
 
-	License: MIT
-	License URI: http://opensource.org/licenses/mit-license.php
+  License: MIT
+  License URI: http://opensource.org/licenses/mit-license.php
 */
 
 body,
@@ -31,19 +31,23 @@ table {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 3.75rem;
+  margin: 1.5rem 0;
 }
 
 h2 {
   font-size: 3rem;
+  margin: 1.25rem 0;
 }
 
 h3 {
   font-size: 2.5rem;
+  margin: 1rem 0;
 }
 
 h4 {
   font-size: 2rem;
+  margin: 0.75rem 0;
 }
 
 body,
@@ -51,8 +55,9 @@ p {
   font-family: 'Merriweather', 'Georgia', 'serif';
 }
 
-p {
+p, ul {
   font-size: 1.25rem;
+  margin-bottom: 2rem;
 }
 
 hr {
@@ -77,10 +82,6 @@ a:hover {
 
 a:visited {
   color: #5D6F1C;
-}
-
-ul {
-  font-size: 36px;
 }
 
 ::-moz-selection {
